# work0

./: .gitignore  CHANGELOG.md  README.md  api_swagger.json  cabal.project  fused-effects.org  position.txt  test.json  work0.cabal
.github/workflows/: haskell.yml
app/: AppRepl.hs  Main.hs
src/: A.x  B.y  Command.hs  Eval.hs  GUI.hs  Graph.hs  InteractiveGraph.hs  Manager.hs  MonomerGUI.hs  Name.hs  Node.hs  Repl.hs  Server.hs  ServerApi.hs  T1.hs  ThreePennyGUI.hs  Type.hs
src/Control/Carrier/: Graph.hs  Store.hs
src/Control/Effect/: Env.hs  Graph.hs  Store.hs
src/ScriptA/: A.x  B.y
src/ScriptB/: A.x  B.y  C.hs  Stack.hs  test.txt
test/: Main.hs
test/script/: objectPair.txt
work/: s.txt  s0.txt  s1.txt  s2.txt  s3.txt
work/example0/: dag.json  g.txt  position.txt  s0.txt  s2.txt
work/example1/: dag.json  g.txt  position.txt  s0.txt  s1.txt  s2.txt  s4.txt  s5.txt  s6.txt  s7.txt
work/json/: careteGraph.json  example0_graph.json  example1_graph.json  insertNode.json  nodeEval.json  nodeLookup.json
work/m0/: node1.txt  node2.txt  node3.txt  node4.txt  node5.txt  node6.txt  node7.txt  node8.txt
