cabal-version:      2.4
name:               work0
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Eval
                   ,  T1
                   , A
                   , B
                   ,  Name 
                   , Control.Effect.Store
                   , Control.Effect.Env
                   , Control.Carrier.Store
                   , Control.Carrier.Graph
                   , Control.Effect.Graph
                   , InteractiveGraph
                   , Type
                   , Graph
                   , MonomerGUI
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , fused-effects
                    , array
                    , containers
                    , text
                    , array 
                    , text 
                    , directory
                   , fgl
                   , fgl-visualize
                   , process
                   , optics
                   , fused-effects-optics
                   , random
                   , aeson
                   , bytestring
                   , monomer
                   , contra-tracer
                   , data-default
                   , lens
    hs-source-dirs:   src
    default-language: Haskell2010
    Build-tools: alex, happy

executable work0
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        work0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded

test-suite work0-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
